update css with id and class

--- a/BNDW/helloword/index.html
+++ b/BNDW/helloword/index.html
@@ -17,6 +17,8 @@
         <p>Lớp học FPT Aptech, học kỳ 1, làm quen với lập trình Web</p>
         <p><b>Giáo viên :</b><i>Nguyễn Xuân Cường</i></p>
         <p style="background-color: rgb(223, 203, 179); color: red;">Lịch học: sáng 2,4,6</p>
+        <button class="myButton" >Đăng ký</button>
+        <button class="myButton">Theo dõi</button>
     </div>
 </body>
 </div>
