dekupdate css with id and class

--- a/BNDW/helloword/index.html
+++ b/BNDW/helloword/index.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <style>
-    
+
 </style>
 
 <body>
     <div>
-        <h1 style="color: rgb(27, 77, 79); font-family: 'Courier New', Courier, monospace;">Hello T2508M</h1>
+        <h1>Hello T2508M</h1>
         <p>Lớp học FPT Aptech, học kỳ 1, làm quen với lập trình Web</p>
         <p><b>Giáo viên :</b><i>Nguyễn Xuân Cường</i></p>
-        <p style="background-color: rgb(223, 203, 179); color: red;">Lịch học: sáng 2,4,6</p>
-        <button class="myButton" >Đăng ký</button>
-        <button class="myButton">Theo dõi</button>
-    </div>
+        <p>Lịch học: sáng 2,4,6</p>
+        <div style="height: 120px; width: auto; margin: 8px;">
+            <label style="width: 120px; display: inline-block">Fullname</label>
+            <input id="fullName" placeholder="Please enter a fullname">
+            <label style="width: 120px; display: inline-block;">Email</label>
+            <input id="email" placeholder="Please enter an email">
+        </div>
+        <button class=" myButton">Đăng ký</button>
+            <button class="myButton">Theo dõi</button>
+        </div>
 </body>
 </div>
 
