--- a/BNDW/02-text/index.html
+++ b/BNDW/02-text/index.html
@@ -7,7 +7,11 @@
     <title>Demo 02</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 </head>
-
+<style>
+    body{
+        font-family: 'Courier New', Courier, monospace;
+    }
+</style>
 <body>
     <div class="container">
         <p class="text-lowercase">HELLO </p>
