--- a/BNDW/07-Nav/service.html
+++ b/BNDW/07-Nav/service.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <title>Services</title>
+     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 </head>
 <header>
     <div>
@@ -41,9 +39,9 @@
     </div>
 
 </header>
-
 <body>
-
+    <div class="container">
+        <h1>Services pages</h1>
+    </div>
 </body>
-
 </html>
